# dcf-valuation

./: .gitignore  .pre-commit-config.yaml  DIAGNOSTIC_FINDINGS.md  LICENSE  README.md  analyze_jnj_monte_carlo.py  dcf.py  estimate_data_download.py  main.py  pyproject.toml  requirements.txt  validate_jnj_growth.py
.github/: copilot-instructions.md
data/: diagnostics_analysis_20260104_225000.json  diagnostics_analysis_20260104_230805.json  diagnostics_report_20260104_225000.txt  diagnostics_report_20260104_230805.txt  diagnostics_results_20260104_224835.json  diagnostics_results_20260104_225000.json  diagnostics_results_20260104_230805.json  diagnostics_results_20260104_230906.json  stress_test_report_20260105_213837.json  stress_test_report_20260105_214121.json  stress_test_report_20260105_214322.json  stress_test_report_20260105_214430.json  stress_test_report_20260105_214611.json
data/backtest/financials/: AAPL_quarterly.parquet  JNJ_quarterly.parquet  JPM_quarterly.parquet  WMT_quarterly.parquet  XOM_quarterly.parquet
data/backtest/market_data/: market_data.parquet
data/backtest/prices/: AAPL_daily.parquet  JNJ_daily.parquet  JPM_daily.parquet  WMT_daily.parquet  XOM_daily.parquet  index.json
data/backtest/results/: pilot_metrics_20260105_222012.json
docs/: BACKTEST_IMPLEMENTATION.md  CACHING_ANALYSIS.md  DAMODARAN_INTEGRATION.md  DYNAMIC_WACC_INTEGRATION.md  EXTERNAL_DATA_ANALYSIS.md  FIX_VALIDATION_REPORT.md  FRED_API_SETUP.md  FRED_SHILLER_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  JNJ_GROWTH_ASSUMPTION_ISSUE.md  MONTE_CARLO_ANALYSIS_JNJ.md  MONTE_CARLO_EXECUTIVE_SUMMARY.md  PARALLEL_WORKERS_ANALYSIS.md  QUICK_REFERENCE.md  SEC_EDGAR_ROADMAP.md  STRESS_TEST_RESULTS.md  SYSTEM_VERIFICATION_REPORT.md  SYSTEM_WORKFLOW.md  XBRL_DIRECT_APPROACH.md  XBRL_IMPLEMENTATION_SUMMARY.md  XBRL_PARSER_COMPARISON.md
scripts/: download_full_history.py  download_pilot_data.py  run_full_backtest.py  run_pilot_backtest.py
src/: __init__.py  config.py  data_validator.py  dcf_engine.py  env_loader.py  exceptions.py  logging_config.py  optimizer.py  portfolio.py  regime.py  relative_valuation.py  utils.py  validation.py
src/backtest/: __init__.py  analysis.py  config.py  data_loader.py  engine.py
src/cli/: __init__.py  commands.py  display.py  interactive.py
src/pipeline/: __init__.py
tests/: test_basic.py  test_damodaran_cache.py  test_dynamic_wacc.py  test_external_integrations.py  test_fixes.py  test_fred_cape.py  test_integrations.py  test_parallel_performance.py  test_sec_edgar_parser.py  test_stocks.py  test_system_diagnostics.py  test_system_stress.py  test_validation.py  test_xbrl_direct_parsing.py  test_xbrl_production.py
