[project]
name = "dcf-valuation"
version = "1.0.0"
description = "Professional DCF (Discounted Cash Flow) valuation toolkit with Monte Carlo simulation, portfolio optimization, and market regime analysis"
authors = [{ name = "JustR3", email = "whispersdi3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.32.0",
    "pyarrow>=18.0.0",
    "pyportfolioopt>=1.5.5",
    "cvxpy>=1.4.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
dcf = "dcf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
