[project]
name = "dcf-valuation"
version = "1.0.0"
description = "Professional DCF (Discounted Cash Flow) valuation toolkit with Monte Carlo simulation, portfolio optimization, and market regime analysis"
authors = [{ name = "JustR3", email = "whispersdi3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.32.0",
    "pyarrow>=18.0.0",
    "pyportfolioopt>=1.5.5",
    "cvxpy>=1.4.0",
    "scikit-learn>=1.3.0",
    "fredapi>=0.5.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "pydantic>=2.12.5",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.100.0",
    "types-requests>=2.32.0",
]

[project.scripts]
dcf = "dcf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
